--- a/index.html
+++ b/index.html
@@ -11,79 +11,231 @@
 
 <body>
 
-  <nav>
-    <div class="logo">
-      <img src="https://newbiz-master-uqgespkghu.now.sh/img/logo-tp.png">
-    </div>
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="https://newbiz-master-uqgespkghu.now.sh/img/logo-tp.png">
+      </div>
 
-    <div class="menu-nav">
-      <ul>
-        <li>
-          <a href="home">Home</a>
-        </li>
+      <div class="menu-nav">
+        <ul>
+          <li><a href="home">Home</a></li>
+          <li><a href="about">About Us</a></li>
+          <li><a href="service">Service</a></li>
+          <li><a href="portfolio">Portfolio</a></li>
+          <li><a href="team">Team</a></li>
+          <li><a href="drop">Drop Down</a></li>
+          <li><a href="contact">Contact Us</a></li>
+        </ul>
+      </div>
 
-        <li>
-          <a href="about-as">About Us</a>
-        </li>
+    </nav>
+  </header>
 
-        <li>
-          <a href="service">Service</a>
-        </li>
-
-        <li>
-          <a href="portfolio">Portfolio</a>
-        </li>
-
-        <li>
-          <a href="team">Team</a>
-        </li>
-
-        <li>
-          <a href="drop-down">Drop Down</a>
-        </li>
-
-        <li>
-          <a href="contact-us">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-
-  </nav>
-
-  <section class="container">
+  <main id="main">
 
     <div class="info-intro">
 
       <div>
-
         <h2>
-
           We provide
           <br>
-            <span>solutions</span>
+          <span>solutions</span>
           </br>
           for your business!
-
         </h2>
-
       </div>
 
       <div>
-
-        <a href="#about" class="get-started-intro">Get Started</a>
-        <a href="#service" class="our-services-intro">Our Services</a>
-
+        <button type="button"><a href="#about">Get Started</a></button>
+        <button type="button"><a href="#services">Our Services</a></button>
       </div>
 
     </div>
 
     <div class="img-intro">
-
       <img src="https://newbiz-master-uqgespkghu.now.sh/img/intro-img.svg">
+    </div>
+
+  </main>
+
+
+  <section id="about">
+
+    <div class="container">
+
+      <div class="titulo">
+        <h1>
+          About Us
+        </h1>
+
+        <p>
+          
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  
+          <br>
+            tempor ut labore et dolore magna aliqua.
+          </br>      
+              
+        </p>
+
+      </div>
+
+      <div class="box-1">
+
+        <div class="box-icon">
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo
+            consequat.
+          </p>
+
+          <div class="icon">
+
+            <div class="icon-bag">
+
+              <i class="fa fa-shopping-bag">                
+              </i>
+
+              <h3>
+                <a href>
+                  Eiusmod Tempor
+                </a>
+              </h3>
+
+              <p>
+                "Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
+                eligendi"
+              </p>
+
+
+            </div>
+
+
+
+          </div>
+
+        </div>
+
+        <div class="img-about">
+          <img src="https://newbiz-master-uqgespkghu.now.sh/img/about-img.svg">
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <section class="services" id="services">
+    <div>
+      <h2>Services</h2>
+      <h4>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
+      </h4>
+    </div>
+
+    <div>
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Lorem Ipsum</h4>
+        <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
+          non
+          provident</p>
+      </div>
+
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Dolor Sitema</h4>
+        <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad
+          limino ata</p>
+      </div>
+
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Sed ut perspiciatis</h4>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
+        </p>
+      </div>
+
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Magni Dolores</h4>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+          laborum</p>
+      </div>
+
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Nemo Enim</h4>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+          deleniti
+          atque</p>
+      </div>
+
+      <div class="whitecards">
+        <img src="" alt="">
+        <h4>Eiusmod Tempor</h4>
+        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
+          eligendi</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="choose">
+
+    <div>
+      <h2>WHY CHOOSE US?</h2>
+      <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
+      </p>
+    </div>
+
+    <div>
+
+      <div class="bluecards">
+        <img src="" alt="">
+        <h4>Corporis dolorem</h4>
+        <p>Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut
+          voluptatibus.</p>
+        <p><span>Read more</span></p>
+      </div>
+
+      <div class="bluecards">
+        <img src="" alt="">
+        <h4>Voluptates dolores</h4>
+        <p>Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
+        <p><span>Read more</span></p>
+      </div>
+
+      <div class="bluecards">
+        <img src="" alt="">
+        <h4>Eum ut aspernatur</h4>
+        <p>Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex.</p>
+        <p><span>Read more</span></p>
+      </div>
 
     </div>
 
+    <div>
+      <div>
+        <h1>274</h1>
+        <p>Clients</p>
+      </div>
+      <div>
+        <h1>421</h1>
+        <p>Projects</p>
+      </div>
+      <div>
+        <h1>1,364</h1>
+        <p>Hours Of Support</p>
+      </div>
+      <div>
+        <h1>18</h1>
+        <p>Hard Workers</p>
+      </div>
+    </div>
   </section>
+
 
 
 </body>
