agregué cards sección Whay-Choose

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     <div class="container-cards">
 
-      <div class="bluecards">
+      <div class="cards-choose">
 
         <img src="" alt="">
 
@@ -217,7 +217,7 @@
 
       </div>
 
-      <div class="bluecards">
+      <div class="cards-choose">
 
         <img src="" alt="">
 
@@ -235,7 +235,7 @@
 
       </div>
 
-      <div class="bluecards">
+      <div class="cards-choose">
 
         <img src="" alt="">
 
